--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-*.zip
-plugin.xml
+/web-app/WEB-INF
+/.classpath
+/.project
+/.settings
 *.log
-target
-target-eclipse
-web-app
+/*.zip
+plugin.xml
+/target
+/target-eclipse
+*.iws
+/.idea
+*.iml
+*.iws
+.DS_Store
+/log
