--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,11 @@ buildscript {
 }
 
 plugins {
-    id "io.spring.dependency-management" version "0.4.0.RELEASE"
+    id "io.spring.dependency-management" version "0.5.1.RELEASE"
     id "com.jfrog.bintray" version "1.1"
 }
 
-version "0.4"
+version "0.1-SNAPSHOT"
 group "org.grails.plugins"
 
 apply plugin: 'maven-publish'
@@ -65,16 +65,12 @@ dependencies {
 
     console "org.grails:grails-console"
     compile 'org.grails.plugins:ajax-tags:1.0.0.BUILD-SNAPSHOT'
-    
     // compile "ch.ethz.ganymed:ganymed-ssh2:build210"
     // compile 'ch.ethz.ganymed:ganymed-ssh2:build251beta1'
     // compile 'ch.ethz.ganymed:ganymed-ssh2:261'
     compile group: 'ch.ethz.ganymed', name: 'ganymed-ssh2', version:'build250'
-
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = gradleWrapperVersion
 }
-
-
