--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
 }
 
-version "3.0.4"
+version "3.0.5"
 group "org.grails.plugins"
 
 apply plugin:"eclipse"
@@ -43,19 +43,15 @@ dependencies {
     compile "org.grails:grails-core"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-dependencies"
-    compile "org.grails:grails-web-boot"
-    compile "org.grails.plugins:cache"
-    compile "org.grails.plugins:scaffolding"
     console "org.grails:grails-console"
-    profile "org.grails.profiles:web-plugin:3.1.4"
-    provided "org.grails:grails-plugin-services"
-    provided "org.grails:grails-plugin-domain-class"
-    testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails.plugins:geb"
-    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
-    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-    compile group: 'ch.ethz.ganymed', name: 'ganymed-ssh2', version:'build250'
+    provided "org.grails:grails-web-boot"
+    provided "org.grails:grails-dependencies"
+    provided 'javax.servlet:javax.servlet-api:3.1.0'
+
+    //compile group: 'ch.ethz.ganymed', name: 'ganymed-ssh2', version:'build250'
+    //compile 'ch.ethz.ganymed:ganymed-ssh2:build250'
+    compile group: 'ch.ethz.ganymed', name: 'ganymed-ssh2', version: '262'
+    //compile 'ch.ethz.ganymed:ganymed-ssh2:262'
     compile 'org.grails.plugins:ajax-tags:1.0.0'
 }
 
